Fix useServerData param in ProxyRepository (#644)
* Increase test coverage of cr-hapi

* add cds service and discovery tests

* add discovery tests

* add private constructor

* add discovery tests

* add service registry test

* cleanup